--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  --app-width: 500px;
+  --brown: #703B09;
+
   margin: 0;
   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
